--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -735,353 +735,6 @@ a {
 .cid-saOOCGzcxU .mbr-section-btn {
   text-align: left;
 }
-.cid-saPR0Yjuzy {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-saPR0Yjuzy nav.navbar {
-  position: fixed;
-}
-.cid-saPR0Yjuzy .dropdown-item:before {
-  font-family: Moririse2 !important;
-  content: '\e966';
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
-  text-align: center;
-  overflow: hidden;
-  transform: scale(0, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-saPR0Yjuzy .dropdown-menu {
-  padding: 0;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-}
-.cid-saPR0Yjuzy .dropdown-item {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-saPR0Yjuzy .dropdown-item:hover,
-.cid-saPR0Yjuzy .dropdown-item:focus {
-  background: #6592e6 !important;
-  color: white !important;
-}
-.cid-saPR0Yjuzy .dropdown-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.cid-saPR0Yjuzy .dropdown-item:last-child {
-  border-bottom: none;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.cid-saPR0Yjuzy .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: .667em 1em !important;
-}
-.cid-saPR0Yjuzy .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-saPR0Yjuzy .nav-link {
-  position: relative;
-}
-.cid-saPR0Yjuzy .container {
-  display: flex;
-  margin: auto;
-}
-.cid-saPR0Yjuzy .iconfont-wrapper {
-  color: #000000 !important;
-  font-size: 1.5rem;
-  padding-right: .5rem;
-}
-.cid-saPR0Yjuzy .dropdown-menu,
-.cid-saPR0Yjuzy .navbar.opened {
-  background: #ffffff !important;
-}
-.cid-saPR0Yjuzy .nav-item:focus,
-.cid-saPR0Yjuzy .nav-link:focus {
-  outline: none;
-}
-.cid-saPR0Yjuzy .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  transition: all 0.25s ease-in-out;
-}
-.cid-saPR0Yjuzy .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-saPR0Yjuzy .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-right: .5rem;
-  vertical-align: sub;
-}
-.cid-saPR0Yjuzy .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  transform: scale(1, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-saPR0Yjuzy .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-saPR0Yjuzy .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-saPR0Yjuzy .navbar {
-  min-height: 70px;
-  transition: all .3s;
-  border-bottom: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
-}
-.cid-saPR0Yjuzy .navbar.opened {
-  transition: all .3s;
-}
-.cid-saPR0Yjuzy .navbar .dropdown-item {
-  padding: .5rem 1.8rem;
-}
-.cid-saPR0Yjuzy .navbar .navbar-logo img {
-  width: auto;
-}
-.cid-saPR0Yjuzy .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-saPR0Yjuzy .navbar.collapsed {
-  justify-content: center;
-}
-.cid-saPR0Yjuzy .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-saPR0Yjuzy .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-.cid-saPR0Yjuzy .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-saPR0Yjuzy .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-saPR0Yjuzy .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 41%;
-}
-.cid-saPR0Yjuzy .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-saPR0Yjuzy .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: .25rem 1.5rem;
-  text-align: center;
-}
-.cid-saPR0Yjuzy .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
-}
-@media (max-width: 991px) {
-  .cid-saPR0Yjuzy .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-saPR0Yjuzy .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-saPR0Yjuzy .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-saPR0Yjuzy .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-saPR0Yjuzy .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 40%;
-  }
-  .cid-saPR0Yjuzy .navbar .navbar-logo img {
-    height: 3rem !important;
-  }
-  .cid-saPR0Yjuzy .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-saPR0Yjuzy .navbar .dropdown-menu .dropdown-item {
-    padding: .25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-saPR0Yjuzy .navbar .navbar-brand {
-    flex-shrink: initial;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-saPR0Yjuzy .navbar .navbar-toggler {
-    flex-basis: auto;
-  }
-  .cid-saPR0Yjuzy .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-  }
-}
-.cid-saPR0Yjuzy .navbar.navbar-short {
-  min-height: 60px;
-}
-.cid-saPR0Yjuzy .navbar.navbar-short .navbar-logo img {
-  height: 2.5rem !important;
-}
-.cid-saPR0Yjuzy .navbar.navbar-short .navbar-brand {
-  min-height: 60px;
-  padding: 0;
-}
-.cid-saPR0Yjuzy .navbar-brand {
-  min-height: 70px;
-  flex-shrink: 0;
-  align-items: center;
-  margin-right: 0;
-  padding: 0;
-  transition: all .3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-saPR0Yjuzy .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-saPR0Yjuzy .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-saPR0Yjuzy .dropdown-item.active,
-.cid-saPR0Yjuzy .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-saPR0Yjuzy .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-saPR0Yjuzy .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-saPR0Yjuzy .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-saPR0Yjuzy .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
-}
-.cid-saPR0Yjuzy .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-saPR0Yjuzy .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-saPR0Yjuzy ul.navbar-nav {
-  flex-wrap: wrap;
-}
-.cid-saPR0Yjuzy .navbar-buttons {
-  text-align: center;
-  min-width: 170px;
-}
-.cid-saPR0Yjuzy button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all .2s;
-  position: relative;
-  align-self: center;
-}
-.cid-saPR0Yjuzy button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #000000;
-}
-.cid-saPR0Yjuzy button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-saPR0Yjuzy button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-saPR0Yjuzy button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-saPR0Yjuzy button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-saPR0Yjuzy nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-saPR0Yjuzy nav.opened .hamburger span:nth-child(2) {
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-saPR0Yjuzy nav.opened .hamburger span:nth-child(3) {
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-saPR0Yjuzy nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-saPR0Yjuzy .navbar-dropdown {
-  padding: 0 1rem;
-  position: fixed;
-}
-.cid-saPR0Yjuzy a.nav-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cid-saPR0Yjuzy .icons-menu {
-  flex-wrap: nowrap;
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-saPR0Yjuzy .navbar {
-    height: 70px;
-  }
-  .cid-saPR0Yjuzy .navbar.opened {
-    height: auto;
-  }
-  .cid-saPR0Yjuzy .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
-}
 .cid-saQ10AYkTJ {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -1394,4 +1047,47 @@ a {
 }
 .cid-saQR7PU00B .btn-social:hover i.socicon {
   color: #ffffff !important;
+}
+.cid-scTQPovFQN {
+  display: flex;
+  background-image: url("../../../assets/images/background12.jpg");
+}
+.cid-scTQPovFQN .mbr-overlay {
+  background-color: #353535;
+  opacity: 0.5;
+}
+.cid-scTQPovFQN .content-wrap {
+  padding: 5rem 1rem;
+}
+@media (min-width: 768px) {
+  .cid-scTQPovFQN {
+    align-items: flex-end;
+  }
+  .cid-scTQPovFQN .row {
+    justify-content: flex-start;
+  }
+  .cid-scTQPovFQN .content-wrap {
+    width: 51%;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-scTQPovFQN .content-wrap {
+    min-width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .cid-scTQPovFQN {
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .cid-scTQPovFQN .mbr-row {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+  .cid-scTQPovFQN .content-wrap {
+    width: 100%;
+  }
+}
+.cid-scTQPovFQN .mbr-section-title {
+  text-align: right;
 }
